# knora-update

./: CMakeLists.txt  README.md
src/: knora-update.cpp
test/: get-test-data.sh
